fix(frontend): set overflow for group cards

--- a/frontend/src/components/GroupCard/group-card.module.scss
+++ b/frontend/src/components/GroupCard/group-card.module.scss
@@ -19,6 +19,6 @@
 .title {
   font-weight: 500 !important;
   text-overflow: ellipsis;
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
 }
